Add edge protection backend part
